--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-	"name": "testing-challenge",
-	"version": "1.0.0",
-	"description": "Testing Sprint Challenge",
-	"main": "index.js",
-	"scripts": {
-		"test": "jest --watch --verbose",
-		"start": "nodemon index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LambdaSchool/Sprint-Challenge--Testing.git"
-	},
-	"keywords": [],
-	"author": "Lambda School",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/LambdaSchool/Sprint-Challenge--Testing/issues"
-	},
-	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
-	"dependencies": {
-		"express": "^4.16.4"
-	},
-	"devDependencies": {
-		"jest": "^23.6.0",
-		"supertest": "^3.3.0"
-	}
+  "name": "testing-challenge",
+  "version": "1.0.0",
+  "description": "Testing Sprint Challenge",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest --watch --verbose",
+    "start": "node index.js",
+    "server": "nodemon index.js"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "repository": "git+https://github.com/LambdaSchool/Sprint-Challenge--Testing.git",
+  "keywords": [],
+  "author": "Lambda School",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/Sprint-Challenge--Testing/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.16.0",
+    "knex": "^0.16.5",
+    "knex-cleaner": "^1.1.4",
+    "sqlite3": "^4.0.6"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0",
+    "jest": "^24.7.1",
+    "nodemon": "^1.18.11",
+    "supertest": "^4.0.2"
+  }
 }
